# smart-todo

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.py  db.py  main.py  prompt_generator.py  pyproject.toml  ui_uploader.py  user_config.ini  utils.py
app/: config.py  db.py  main.py  ui_uploader.py  user_config.ini  utils.py
app/components/: habit_calendar.py  task_card.py
app/data/: init_data.py  init_db.py
app/styles/: base.qss  style_dark.qss  style_light.qss
app/ui/: ArchiveDialog.ui  BoardPage.ui  HabitCard.ui  HabitDetailDialog.ui  HabitDialog.ui  HabitsPage.ui  MainWindow.ui  TaskDialog.ui  TodayPage.ui  ui_ArchiveDialog.py  ui_BoardPage.py  ui_HabitCard.py  ui_HabitDetailDialog.py  ui_HabitDialog.py  ui_HabitsPage.py  ui_MainWindow.py  ui_TaskDetailDialog.py  ui_TaskDialog.py  ui_TodayPage.py
app/windows/: archive_dialog.py  base_dialog.py  board_window.py  habit_detail_dialog.py  habits_page.py  settings_dialog.py  task_dialog.py  today_page.py
components/: task_card.py
data/: init_db.py
icons/: app_icns.icns
styles/: style_light.qss
ui/: TaskDetailDialog.ui  ui_ArchiveDialog.py  ui_MainWindow.py  ui_TaskDetailDialog.py  ui_TaskDialog.py
windows/: archive_dialog.py  base_dialog.py  task_dialog.py
