[tool.poetry]
name = "gpttodo"
version = "0.1.0"
description = ""
authors = ["Alex <alexander.b@dvgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyqt6 = "^6.8.1"
pyinstaller = "^6.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "Makefile",
    "migrations/versions"
]

[tool.ruff.lint]
# list of rules - https://docs.astral.sh/ruff/rules/
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
